feat: Initial commit of dBwatch PWA with core functionality
- Added index.html for the main application structure
- Implemented styles.css for foundational and responsive design
- Created sw.js for service worker handling caching and offline functionality
- Included UI elements such as gear icon, dB reading display, and controls dialog
- Established caching strategy for static assets and network requests
- Integrated update notification banner for new version alerts

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="dBwatch">
     <meta name="description" content="Real-time decibel level monitor PWA">
-    <link rel="manifest" href="../manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="styles.css">
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" href="../icons/icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="../icons/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="../icons/icon-512x512.png">
+    <link rel="apple-touch-icon" href="./icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="./icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="./icons/icon-512x512.png">
     <title>dB Watch</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
 
     <!-- Message Board (Center Area for SVG Messages) -->
     <div id="message_board" class="message-board">
-        <img src="../media/welcom_logo.svg" alt="Welcome" id="message_svg">
+        <img src="./media/welcom_logo.svg" alt="Welcome" id="message_svg">
     </div>
 
     <!-- dB Reading Display (Bottom-Left) -->
